# edutrack

./: package.json
src/: forgotpass.html  login.html  login.js  logout.html  logout2.html  profile.html  profiles.html  signup.html  signup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
