[package]
name = "edutrack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "edutrack"
path = "src/main.rs"

[lib]
name = "edutrack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
bcrypt = "0.15" 
time = { version = "0.3", features = ["macros", "serde"] }
jsonwebtoken = "8.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
